@@ -3,3 +3,4 @@ Who	Date	  	Line	Description
 [XM]	08 03 2021	00138	Updated revision
 [XM]	08 03 2021	00680	Incorrect value of mne_waix (was 21 => is 32)
 [XM] 	08 03 2021	04244	Forgot to branch if stopkey was found
+[XM]	18 03 2021	00306	Moved hwstack reference to global.asm (ROM)
